# vehiclehud

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac  elm327.c  index.html  main.c  main.cpp  obd.c  obd.h  params.json
AVR/Libraries/vfdlib/: SerialCUUW.cpp
AVR/Testing/: Testing.atsln  Testing.atsuo
AVR/Testing/ADCTest/: ADCTest.c  ADCTest.cproj
AVR/Testing/FullTest/: FullTest.cpp  Noritake_VFD_GUU100.cpp  Noritake_VFD_GUU100.h  config.h  interface.h
AVR/Testing/LCDTesting/: LCDTesting.cpp  LCDTesting.cppproj  lcd.h
AVR/Testing/Testing/: Testing.c  Testing.cproj
AVR/hex/: ADCTest.hex  BlinkLED.hex  FullTest.hex  LCDTesting.hex  VFDTesting.hex
Firmware/: ADC_Values.ods
Firmware/HUDFirmware/: HUDFirmware.atsln  HUDFirmware.cpp  HUDFirmware.cppproj
PCB/: SeniorDesign-cache.lib  SeniorDesign.pro
PCB/Main Board/: main-cache.lib  obd.sch
PCB/OBD/: OBD-cache.lib  OBD.pro  OBD.sch
PCB/PSU/: 12V.sch  PSU.cmp  PSU.csv  PSU.kicad_pcb  PSU.lst  PSU.net  PSU_packages.ods
doc/report/: Makefile  README.md  budget.tex  cover.tex  detailed-design.tex  executive-summary.tex  experimental-results.tex  introduction.tex  project-objectives.tex  project-specifications.tex  project-team.tex  references.tex  report.tex  timeline-and-deliverables.tex
src/: Makefile  Makefile.am  avr.c  avr.h  avrtest.c  displaymodes.py  elm327.c  elm327.h  integrationtests.py  main.c  obd.c  obd.h  obdtest.c  tests.py  vehiclehud.py  vhudd  vhudpi.c  vhudpi_mod.c
src/ImageToByteArray/: ImageToByteArray.sln
src/OBD Test/: OBD Test.sln
src/PCB/PSU/: PSU.dsn  (+6 more)
(+55 files in other folders)
